--- a/status.html
+++ b/status.html
@@ -1,12 +1,10 @@
 <html>
     <head>
-      <script src="yahoo-identity-api/yahoo-identity-api.js"></script>
+      <script src="vaike/xhr.vaike.js"></script>
+      <script src="vaike/yahoo.vaike.js"></script>
       <script>
 
-      var pollIntervalMin = 1000 * 5;  // 5 seconds
-      var pollIntervalMax = 1000 * 60 * 60;  // 1 hour
-      var requestFailureCount = 0;  // used for exponential backoff
-      var requestTimeout = 1000 * 5;  // 5 seconds
+      var pollInterval = 1000 * 5;  // 5 seconds
 
       var username;
 
@@ -61,7 +59,7 @@
 
           killSchedule(scheduleTimer);
 
-          YAHOO_IDENTITY_API.getUserName( function (un) {
+          VAIKE.yahoo.getUserName( function (un) {
 
               username = un;
               // if the user is logged in
@@ -76,22 +74,11 @@
                       yahooStatus = false;
                   }
               }
-              scheduleRequest();
+              scheduleTimer = window.setTimeout(startRequest, pollInterval);
+              
           });
       }
 
-
-      /**
-       * Schedules the next request
-       */
-      function scheduleRequest() {
-        var randomness = Math.random() * 2;
-        var exponent = Math.pow(2, requestFailureCount);
-        var delay = Math.min(randomness * pollIntervalMin * exponent, pollIntervalMax);
-        delay = Math.round(delay);
-
-        scheduleTimer = window.setTimeout(startRequest, delay);
-      }
 
 
       function init() {
